--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,5 +1,5 @@
 # Artifact Hub repository metadata file
-repositoryID: 1234567-qwe
+repositoryID: 83056aaa-9dec-4f9d-9f50-c51528e514b4
 owners:
   - name: vngcloud
     email: support@vngcloud.vn
