added LICENSE and README docs for vmonitor metric agent repo

--- a/charts/vmonitor-metric-agent/Chart.yaml
+++ b/charts/vmonitor-metric-agent/Chart.yaml
@@ -9,6 +9,7 @@ home: https://www.vngcloud.vn
 maintainers:
   - name: VNGCloud
     email: support@vngcloud.vn
+icon: https://vngcloud.github.io/helm-charts-vmonitor/vngcloud-logo.png
 dependencies:
 - condition: vmonitor.kubeStateMetricsEnabled
   name: kube-state-metrics
