--- a/charts/vmonitor-metric-agent/templates/secret-vmonitor.yaml
+++ b/charts/vmonitor-metric-agent/templates/secret-vmonitor.yaml
@@ -8,7 +8,7 @@ metadata:
 type: Opaque
 data:
   CLUSTER_NAME: {{ default "cluter-k8s" .Values.vmonitor.clusterName | b64enc | quote }}
-  IAM_CLIENT_ID: {{ required "IAM_CLIENT_ID is required value!" .Values.vmonitor.iamClientID | b64enc | quote }}
-  IAM_CLIENT_SECRET: {{ required "IAM_CLIENT_SECRET is required value!" .Values.vmonitor.iamClientSecret | b64enc | quote }}
+  IAM_CLIENT_ID: {{ default "YOUR_IAM_CLIENT_ID" .Values.vmonitor.iamClientID | b64enc | quote }}
+  IAM_CLIENT_SECRET: {{ default "YOUR_IAM_CLIENT_SECRET" .Values.vmonitor.iamClientSecret | b64enc | quote }}
   VMONITOR_SITE: {{ default "monitoring-agent.vngcloud.vn" .Values.vmonitor.vmonitorSite | b64enc | quote }}
   IAM_URL: {{ default "https://iamapis.vngcloud.vn/accounts-api/v2/auth/token" .Values.vmonitor.iamURL | b64enc | quote }}
